--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -31,7 +31,7 @@
         
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active px-1" id="main_tab"><a class="nav-link" href="{% url 'index' %}">Главная</a></li>
+                <li class="nav-item px-1" id="main_tab"><a class="nav-link" href="{% url 'index' %}">Главная</a></li>
                 <li class="nav-item px-1" id="theory_tab"><a class="nav-link" href="{% url 'intro' %}">Теория</a></li>
                 <li class="nav-item px-1" id="practice_tab"><a class="nav-link" href="/practice">Практика</a></li>
             </ul>
@@ -119,13 +119,7 @@
     <!--    Latest compiled and minified JavaScript-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     {% block scripts %}
-    <script type="text/javascript">
-        $('#modal-login').on('show.bs.modal', function (e) {
-            e.preventDefault();
-            $( '#reg-nav-item' ).removeClass( 'active' );
-            $( '#log-nav-item' ).removeClass( 'active' );
-        })
-    </script>
+    
     {% endblock %}
 
     
