--- a/mainApp/templates/mainApp/home.html
+++ b/mainApp/templates/mainApp/home.html
@@ -57,7 +57,7 @@ $('#regClick').click(function(e) {
         $( '#log-nav-item' ).removeClass( 'active' );
 });
 $( '.navbar-nav' ).find( 'li.active' ).removeClass( 'active' );
-$( '#main_tab' ).addClass( 'active' );
+$( '#practice_tab' ).addClass( 'active' );
 </script>
 
 {% endblock %}
