--- a/practice/templates/practice/tasks/task_1.html
+++ b/practice/templates/practice/tasks/task_1.html
@@ -4,18 +4,18 @@
 <nav aria-label="Page navigation">
   <ul class="pagination">
     <li class="page-item">
-      <a class="page-link" href="#" aria-label="Previous">
+      <a class="page-link" aria-label="Previous" id="prev">
         <span aria-hidden="true">&laquo;</span>
         <span class="sr-only">Previous</span>
       </a>
     </li>
-    <li class="page-item active" id="btn_task_1_1"><a class="page-link">1</a></li>
-    <li class="page-item" id="btn_task_1_2"><a class="page-link">2</a></li>
-    <li class="page-item" id="btn_task_1_3"><a class="page-link">3</a></li>
-    <li class="page-item" id="btn_task_1_4"><a class="page-link">4</a></li>
-    <li class="page-item" id="btn_task_1_5"><a class="page-link">5</a></li>
+    <li class="page-item active" id="btn_task_1"><a class="page-link">1</a></li>
+    <li class="page-item" id="btn_task_2"><a class="page-link">2</a></li>
+    <li class="page-item" id="btn_task_3"><a class="page-link">3</a></li>
+    <li class="page-item" id="btn_task_4"><a class="page-link">4</a></li>
+    <li class="page-item" id="btn_task_5"><a class="page-link">5</a></li>
     <li class="page-item">
-      <a class="page-link" href="#" aria-label="Next">
+      <a class="page-link" aria-label="Next" id="next">
         <span aria-hidden="true">&raquo;</span>
         <span class="sr-only">Next</span>
       </a>
@@ -45,5 +45,7 @@
 <script src="{% static 'js/viz.js/viz.js' %}"></script>
 <script src="{% static 'js/viz.js/full.render.js' %}"></script>
 <script src="{% static 'js/practice/practice_task_1.js' %}"></script>
+<script src="{% static 'js/practice/moving.js' %}"></script>
+
 
 {% endblock %}
