--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -51,9 +51,9 @@
       
     {% block content %}
     {% endblock %}
-     
+    
     <div id="popupLogin" class="modal fade" tabindex="-1" id="modal-login">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                    <h4 class="modal-title">Добро пожаловать!</h4>
