--- a/theory/templates/theory/main.html
+++ b/theory/templates/theory/main.html
@@ -2,8 +2,8 @@
 
 {% block account-loginNO %}
 <ul class="navbar-nav ml-auto">
-    <li class="nav-item active my-2 px-1"><a class="btn btn-primary" data-toggle="modal" href="#popupLogin" role="button" id="regClick">Регистрация</a></li>
-    <li class="nav-item my-2 px-1"><a class="btn btn-success" data-toggle="modal" href="#popupLogin" role="button" id="logClick">Вход</a></li>
+    <li class="nav-item active my-2 px-1"><button class="btn btn-primary" data-toggle="modal" data-target="#popupLogin" id="regClick" data-whatever="reg">Регистрация</button></li>
+    <li class="nav-item my-2 px-1"><button class="btn btn-success" data-toggle="modal" data-target="#popupLogin" id="logClick" data-whatever="log">Вход</button></li>
 </ul>
 {% endblock %}
 
