--- a/practice/templates/practice/tasks/task_1.html
+++ b/practice/templates/practice/tasks/task_1.html
@@ -26,6 +26,7 @@
 <div class="jumbotron">
     <div class="container">
     <h5>Дан конечный автомат-распознаватель:</h5>
+    <p>Начальное состояние выделено красным, финальные (допускающие) - в двойном кружке, не допускающее - в одинарном.</p>
     <br><div id="graphviz_svg"><!-- Target for dynamic svg generation --></div><hr>
     <p>Допускает ли автомат данную цепочку?</p>
     <p id="statement">loading...</p><br>
