--- a/practice/templates/practice/main.html
+++ b/practice/templates/practice/main.html
@@ -12,10 +12,13 @@
 <div class="row">
     <div class="col-sm-3 sidebar">
         <ul class="nav nav-sidebar hidden-xs hidden-sm list-group">
-            <li class="list-group-item"><a href="{% url 'task1' %}">Задание 1</a></li>
-            <li class="list-group-item"><a href="{% url 'task2' %}">Задание 2</a></li>
-            <li class="list-group-item"><a href="{% url 'task3' %}">Задание 3</a></li>
+            <li class="list-group-item"><a href="{% url 'task1' %}">Допущение цепочки автоматом</a></li>
+            <li class="list-group-item"><a href="{% url 'task1' %}">Найти к. автомат по описанию языка</a></li>
+            <li class="list-group-item"><a href="{% url 'task2' %}">Принадлежность слова регулярному выражению</a></li>
+            <li class="list-group-item"><a href="{% url 'task_DFA_to_regex' %}">Упростить регулярное выражение</a></li>
+            <li class="list-group-item"><a href="{% url 'task3' %}">Соотвествие автомата рег. выражению</a></li>
             <li class="list-group-item"><a href="{% url 'task_DFA_to_regex' %}">ДКА в регулярное выражение</a></li>
+            <li class="list-group-item"><a href="{% url 'task_DFA_to_regex' %}">Регулярность языка</a></li>
         </ul>
     </div>
     <div class="col-sm-9">
