--- a/practice/templates/practice/main.html
+++ b/practice/templates/practice/main.html
@@ -13,7 +13,7 @@
     <div class="col-sm-3 sidebar">
         <ul class="nav nav-sidebar hidden-xs hidden-sm list-group">
             <li class="list-group-item"><a href="{% url 'task1' %}">Допущение цепочки автоматом</a></li>
-            <li class="list-group-item"><a href="{% url 'task1' %}">Найти к. автомат по описанию языка</a></li>
+            <li class="list-group-item"><a href="{% url 'lang_description' %}">Регулярное выражение по описанию языка</a></li>
             <li class="list-group-item"><a href="{% url 'task2' %}">Принадлежность слова регулярному выражению</a></li>
             <li class="list-group-item"><a href="{% url 'task_DFA_to_regex' %}">Упростить регулярное выражение</a></li>
             <li class="list-group-item"><a href="{% url 'task3' %}">Соотвествие автомата рег. выражению</a></li>
