--- a/practice/templates/practice/tasks/lang_description.html
+++ b/practice/templates/practice/tasks/lang_description.html
@@ -40,6 +40,5 @@
 <script src="{% static 'js/viz.js/full.render.js' %}"></script>
 <script src="{% static 'js/practice/lang_description.js' %}"></script>
 <script src="{% static 'js/practice/moving.js' %}"></script>
-
-
+<script>$('#lang_description').addClass('active');</script>
 {% endblock %}
