--- a/practice/templates/practice/tasks/task_2.html
+++ b/practice/templates/practice/tasks/task_2.html
@@ -46,5 +46,5 @@
 
 {% load staticfiles%}
 <script src="{% static 'js/practice/practice_task_2.js' %}"></script>
-
+<script>$('#task2').addClass('active');</script>
 {% endblock %}
