--- a/mainApp/static/css/style.css
+++ b/mainApp/static/css/style.css
@@ -76,3 +76,10 @@ table.table-bordered > tbody > tr > td{
 table.table-bordered > tbody > tr > th{
     border:1.5px solid;
 }
+
+.list-group-item-linkable:hover {
+    color: #555;
+    text-decoration: none;
+    background-color: #f5f5f5;
+    cursor: pointer;
+}
