--- a/practice/templates/practice/tasks/task_DFA_to_regex.html
+++ b/practice/templates/practice/tasks/task_DFA_to_regex.html
@@ -37,5 +37,5 @@
 <script src="{% static 'js/viz.js/viz.js' %}"></script>
 <script src="{% static 'js/viz.js/full.render.js' %}"></script>
 <script src="{% static 'js/practice/taskDFAtoregex.js' %}"></script>
-
+<script>$('#task_DFA_to_regex').addClass('active');</script>
 {% endblock %}
