--- a/practice/templates/practice/tasks/task_1.html
+++ b/practice/templates/practice/tasks/task_1.html
@@ -9,7 +9,7 @@
         <span class="sr-only">Previous</span>
       </a>
     </li>
-    <li class="page-item active" id="btn_task_1"><a class="page-link">1</a></li>
+    <li class="page-item" id="btn_task_1"><a class="page-link">1</a></li>
     <li class="page-item" id="btn_task_2"><a class="page-link">2</a></li>
     <li class="page-item" id="btn_task_3"><a class="page-link">3</a></li>
     <li class="page-item" id="btn_task_4"><a class="page-link">4</a></li>
@@ -26,7 +26,7 @@
 <div class="jumbotron">
     <div class="container">
     <h5>Дан конечный автомат-распознаватель:</h5>
-    <p>Начальное состояние выделено красным, финальные (допускающие) - в двойном кружке, не допускающее - в одинарном.</p>
+    <p>Начальное состояние выделено красным, финальные (допускающие) - в двойном кружке, не допускающие - в одинарном.</p>
     <br><div id="graphviz_svg"><!-- Target for dynamic svg generation --></div><hr>
     <p>Допускает ли автомат данную цепочку?</p>
     <p id="statement">loading...</p><br>
