--- a/practice/templates/practice/tasks/task_3.html
+++ b/practice/templates/practice/tasks/task_3.html
@@ -4,18 +4,18 @@
 <nav aria-label="Page navigation">
   <ul class="pagination">
     <li class="page-item">
-      <a class="page-link" href="#" aria-label="Previous">
+      <a class="page-link" aria-label="Previous" id="prev">
         <span aria-hidden="true">&laquo;</span>
         <span class="sr-only">Previous</span>
       </a>
     </li>
-    <li class="page-item active" id="btn_task_3_1"><a class="page-link">1</a></li>
-    <li class="page-item" id="btn_task_3_2"><a class="page-link">2</a></li>
-    <li class="page-item" id="btn_task_3_3"><a class="page-link">3</a></li>
-    <li class="page-item" id="btn_task_3_4"><a class="page-link">4</a></li>
-    <li class="page-item" id="btn_task_3_5"><a class="page-link">5</a></li>
+    <li class="page-item" id="btn_task_1"><a class="page-link">1</a></li>
+    <li class="page-item" id="btn_task_2"><a class="page-link">2</a></li>
+    <li class="page-item" id="btn_task_3"><a class="page-link">3</a></li>
+    <li class="page-item" id="btn_task_4"><a class="page-link">4</a></li>
+    <li class="page-item" id="btn_task_5"><a class="page-link">5</a></li>
     <li class="page-item">
-      <a class="page-link" href="#" aria-label="Next">
+      <a class="page-link" aria-label="Next" id="next">
         <span aria-hidden="true">&raquo;</span>
         <span class="sr-only">Next</span>
       </a>
@@ -26,10 +26,11 @@
 <div class="jumbotron">
     <div class="container">
     <h5>Дано регулярное выражение:</h5>
+    <p>Начальное состояние выделено красным, финальные (допускающие) - в двойном кружке, не допускающие - в одинарном.</p>
     <br>
     <p id="regex_assignment"><!-- Target for dynamic svg generation --></p>
     <hr>
-    <p>Выберете расширенный конечный автомат, соответствующий данному регулярному выражению:</p><br>
+    <p>Выберете конечный автомат, соответствующий данному регулярному выражению:</p><br>
 
     <div class="row">
       <div class="col-md-11">
@@ -90,5 +91,6 @@
   <script src="{% static 'js/practice/practice_task_3.js' %}"></script>
   <script src="{% static 'js/viz.js/viz.js' %}"></script>
   <script src="{% static 'js/viz.js/full.render.js' %}"></script>
+  <script src="{% static 'js/practice/moving.js' %}"></script>
   <script>$('#task3').addClass('active');</script>
 {% endblock %}
