regex theory in basic

--- a/theory/templates/theory/lessons/basic_definitions.html
+++ b/theory/templates/theory/lessons/basic_definitions.html
@@ -24,7 +24,7 @@
     <li><p>Пустая цепочка, для ее обозначения введен специальный символ <em>ε</em>.</p></li>
 </ul>
 
-<h5 class="mb-3 mt-5">Операции над цепочками.</h5>
+<h5 class="mb-3 mt-5">Операции над цепочками</h5>
 
 <ul>
     <li><p>Цепочки строятся из символов конечного словаря.</p></li>
@@ -43,7 +43,7 @@
     </li>
 </ul>
 
-<h5 class="mb-3 mt-5">Язык: формальное определение.</h5>
+<h5 class="mb-3 mt-5">Язык: формальное определение</h5>
 
 <p><strong>Определение.</strong><br>
     Языком над словарем Σ называется произвольное множество
@@ -60,6 +60,80 @@
     (континуум, т.к. число подмножеств счетного множества имеет мощность континуум).</p>
 
 <h5 class="mb-3 mt-5">Примеры языков.</h5>
+
+
+<h5 class="mb-3 mt-5">Регулярные множества. Формальное определение</h5>
+
+<ul>
+    <li><p><b>Определение.</b><br>Класс регулярных множеств над конечным словарем Σ определяется так:</p>
+        <p>∅ - регулярное множество;<br>
+        {ε} - регулярное множество;<br>
+        {a} - регулярное множество для любого a∈Σ;<br></p>
+    </li>
+
+    <li><p>Если S и T - регулярные множества, то регулярны и:</p>
+        <p>объединение S∪T;<br>
+        произведение ST;<br>
+        итерация S* ;<br></p>
+    </li>
+
+    <li><p>Примеры регулярных множеств:</p>
+        <p>{ab, ba}* {aa} = {aa, abaa, baaa, ababbaaa, babaabaa, ... }<br>
+        {b} ( {c} ∪ {d, ab}*) = {bc, b, bd, bab, bababd, ... }<br></p>
+    </li>
+
+    <li><p>Примеры нерегулярных множеств:</p>
+        <p>{anbn| n>0} = {ab, aabb, aaabbb, aaaabbbb, ... };<br>
+        {α⏐ в цепочке α количества вхождений символов а и b совпадают} =<br>
+        = {aababbba, ε, baababaabb, ba, ab, ... }<br></p>
+    </li>
+</ul>
+
+<h5 class="mb-3 mt-5">Регулярные выражения</h5>
+
+<ul>
+    <li>
+        <p>Регулярные множества хороши тем, что их можно описать формулами, которые называются регулярными выражениями.</p>
+    </li>
+
+    <li>
+        <p>Регулярное выражение показывает, как можно построить данное регулярное множество с использованием трех операций: конкатенации, объединения и итерации</p>
+    </li>
+
+    <li><p><b>Определение.</b><br>Класс регулярных выражений над конечным словарем Σ определяется так:</p>
+        <p>∅, ε - и любое a∈Σ - регулярные выражения;</p>
+    </li>
+
+    <li>
+        <p>Если R1 и R2- рег. выр., то регулярными выражениями будут:</p>
+        <p>их сумма <b>R1 + R2</b>; (знак ‘+’, иногда записывают как ‘|’)<br><i>Например</i>, {"ab", "c"}|{"ab", "d", "ef"} = {"ab", "c", "d", "ef"}<br><br>
+        их произведение <b>R1R2</b>; <br><i>Например</i>, {"boy", "girl"}{"friend", "cott"} = {"boyfriend", "girlfriend", "boycott", "girlcott"}<br><br>
+        итерация <b>R1*</b> и урезанная итерация R1+;<br><i>Например</i>, {"Run", "Forrest"}* = {ε, "Run", "Forrest", "RunRun", "RunForrest", "ForrestRun", "ForrestForrest", ...}<br><br></p>
+    </li>
+
+    <li>
+        <p>Приоритеты операций: *, произведение, сложение</p>
+    </li>
+    <li>
+        <p>Скобки ( ) используются для группировки (для задания порядка выполнения операций)</p>
+    </li>
+</ul>
+
+<p><i>Пример регулярных выражений</i>: ab + ba*; (aa)*b + (c + dab)*</p>
+
+<h5 class="mb-3 mt-5">Регулярные множества и регулярные выражения</h5>
+
+<p>Чтобы лучше понять операции, рассмотрим соответствие операций регулярных выражений и регулярных множеств:</p>
+
+<ul>
+    <li><p>конкатенация подформул соответствует произведению множеств</p></li>
+    <li><p>операция сложения ‘+’ (или) соответствует операции ∪ объединения множеств</p></li>
+    <li><p>операция итерации R* соответствует операции MR* итерации множеств (т.е. 0 или большее число повторений)</p></li>
+    <li><p>операция R+ соответствует операции MR+ усеченной итерации множества (т.е. 1 или большее число повторений)</p></li>
+</ul>
+
+<p>Таким образом, выражение b( c + (d + a)*) определяет язык {bc, b, bd, bdd, bda, baad, ... }, полученный последовательностью операций над одноэлементными множествами:
+        {b}•( {c} ∪ ({d} ∪ {a}•{b})*)</p>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
