--- a/theory/templates/theory/main.html
+++ b/theory/templates/theory/main.html
@@ -14,6 +14,7 @@
         <ul class="nav nav-sidebar hidden-xs hidden-sm list-group">
             <li class="list-group-item"><a href="{% url 'intro' %}">Введение</a></li>
             <li class="list-group-item"><a href="{% url 'basic_definitions' %}">Регулярные множества и выражения</a></li>
+            <li class="list-group-item"><a href="{% url 'regex_equivalence' %}">Эквивалентность регулярных выражений</a></li>
             <li class="list-group-item"><a href="{% url 'FA' %}">Конечные автоматы</a></li>
             <li class="list-group-item"><a href="{% url 'conversion_chart' %}">Диаграмма переходов</a></li>
             <li class="list-group-item"><a href="{% url 'regex_to_NFA' %}">Построение ДКА по регулярному выражению</a></li>
