--- a/theory/templates/theory/lessons/automaton_languages.html
+++ b/theory/templates/theory/lessons/automaton_languages.html
@@ -3,8 +3,8 @@
 {% block doc %}
 <div class="jumbotron">
     <div class="container">
-    <h3 class="mb-3">Основные определения и понятия</h3>
-    <p>Для начала давайте введем необходимые базовые термины, которые пригодятся нам в дальнейшем.</p>
+    <h3 class="mb-3">Автоматные языки</h3>
+    <p><strong>Определение.</strong><br>Язык L называется автоматным, если существует конечный автомат, допускающий L.</p>
 </div>
 </div>
 
