--- a/theory/templates/theory/main.html
+++ b/theory/templates/theory/main.html
@@ -16,7 +16,7 @@
             <li class="list-group-item"><a href="{% url 'basic_definitions' %}">Регулярные множества и выражения</a></li>
             <li class="list-group-item"><a href="{% url 'regex_equivalence' %}">Эквивалентность регулярных выражений</a></li>
             <li class="list-group-item"><a href="{% url 'FA' %}">Конечные автоматы</a></li>
-            <li class="list-group-item"><a href="{% url 'conversion_chart' %}">Диаграмма переходов</a></li>
+            <li class="list-group-item"><a href="{% url 'automaton_languages' %}">Автоматные языки</a></li>
             <li class="list-group-item"><a href="{% url 'regex_to_NFA' %}">Построение ДКА по регулярному выражению</a></li>
             <li class="list-group-item"><a href="#">Построение НКА</a></li>
             <li class="list-group-item"><a href="{% url 'NFA_to_DFA' %}">Построение ДКА по НКА</a></li>
