--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>{% block title %}Default Title{% endblock %}</title>
+
     {% load staticfiles %}
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
