--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -7,8 +7,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
-    <title>{% block title %}Default Title{% endblock %}</title>
+    <title>{% block title %}Главная{% endblock %}</title>
 
+    <link rel="shortcut icon" href="{% static 'media/favicon.ico' %}" type="image/x-icon">
+    <!-- <link rel="icon" href="{% static 'media/favicon.ico' %}" type="image/x-icon"> -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
     <!--    jQuerty-->
