--- a/practice/templates/practice/main.html
+++ b/practice/templates/practice/main.html
@@ -1,5 +1,7 @@
 {% extends "mainApp/wrapper.html" %}
 
+{% block title %}Практика{% endblock %}
+
 {% block account-loginNO %}
 <ul class="navbar-nav ml-auto">
     <li class="nav-item active my-2 px-1"><a class="btn btn-primary" data-toggle="modal" href="#popupLogin" role="button">Регистрация</a></li>
