--- a/theory/templates/theory/main.html
+++ b/theory/templates/theory/main.html
@@ -1,5 +1,7 @@
 {% extends "mainApp/wrapper.html" %}
 
+{% block title %}Теория{% endblock %}
+
 {% block account-loginNO %}
 <ul class="navbar-nav ml-auto">
     <li class="nav-item active my-2 px-1"><button class="btn btn-primary" data-toggle="modal" data-target="#popupLogin" id="regClick" data-whatever="reg">Регистрация</button></li>
